--- a/app/globals.css
+++ b/app/globals.css
@@ -2,10 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+
+
+@layer base {
+  :root {
+    --primary-color: #2a1344;
+    --background: #ffffff;
+    --primary: #2a1344;
+    --color-text-base: #ffffff;
+    --color-text-muted: #e9e9e9; 
+  }
 }
+
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -18,4 +26,30 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.custom-button {
+  display: inline-block;
+  padding: 12px 24px; 
+  color: white; 
+  font-size: 16px; 
+  font-weight: 500; 
+  text-align: center; 
+  background: linear-gradient(to right, #7b2cbf, #5a4fcf); /* Gradient background */
+  border: none; 
+  border-radius: 12px;
+  cursor: pointer; 
+  transition: all 0.3s ease; /* Smooth transitions for hover effects */
+}
+
+.custom-button:hover {
+  background: linear-gradient(to right, #5a4fcf, #7b2cbf); /* Reverse the gradient on hover */
+  transform: scale(1.05); /* Slightly enlarge the button */
+}
+
+.text-gradient {
+  @apply bg-clip-text text-transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
